spot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spot
  name: spot
spec:
  replicas: 5
  selector:
    matchLabels:
      app: spot
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spot
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
      # tolerations:
      #   - key: "kubernetes.azure.com/scalesetpriority"
      #     operator: "Equal"
      #     value: "spot"
      #     effect: "NoSchedule"
      # affinity:
      #   nodeAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #     - weight: 100
      #       preference:
      #         matchExpressions:
      #         - key: kubernetes.azure.com/scalesetpriority
      #           operator: In
      #           values:
      #           - spot
